--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "minisearch": "^7.1.0",
     "react": "^18.3.1",
