--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,7 +26,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-        IMAGE_TAG: ${{ github.run_number }}-${{ github.run_attempt }}-${{ github.run_id }}-${{ github.event.repository.updated_at }}
+        IMAGE_TAG: ${{ github.event.repository.updated_at }}
 
       run: |
         docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
