--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,7 +26,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-        IMAGE_TAG: $(date +'%Y%m%d-%H%M')
+        IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha.substr(0,7) }}
 
       run: |
         docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
