Add ECS deployment step to workflow

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -40,3 +40,11 @@ jobs:
       run: |
         docker push ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
         docker push ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:latest
+
+    - name: Force ECS deployment
+      run: |
+        aws ecs update-service \
+          --cluster ${{ secrets.ECS_CLUSTER_NAME }} \
+          --service ${{ secrets.ECS_SERVICE_NAME }} \
+          --force-new-deployment \
+          --region ${{ secrets.AWS_REGION }}
